--- a/mathquiz_server/qml.qrc
+++ b/mathquiz_server/qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>MathQuizServerOverview.qml</file>
     </qresource>
 </RCC>
